# GNN_to_Knapsack

./: .commitlintrc.yaml  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_CONFIGS.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXTENSIBILITY_SUMMARY.md  Makefile  README.md  SETUP_SUMMARY.md  ZENODO.md  debug_repair.py  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.codex/: config.yaml  eval.md  project.md  risks.md  runbook.md  style.md  system.md  tasks.md  tools.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
ablation_arch/: architecture_ablation.json
ablation_arch/GAT_checkpoint/: final_model.pt  training_history.json
ablation_arch/GCN_checkpoint/: final_model.pt  training_history.json
ablation_arch/PNA_checkpoint/: best_model.pt  training_history.json
ablation_study/: feature_ablation.json
artifacts/: README.md
checkpoints/: README.md
configs/: README.md  validation_config.yaml
data/: README.md
docs/: development.md  index.md
docs/_archive/: CI_WORKFLOW_FIXES.md  FINAL_LINTING_FIXES.md  LINTING_FIXES_SUMMARY.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  VALIDATION_QUICKSTART.md  WORKFLOW_FIX_SUMMARY.md
docs/api/: analysis.md  data.md  decoding.md  eval.md  index.md  models.md  training.md
docs/architecture/: implementation_summary.md
docs/checklists/: reproducibility_checklist.md
docs/guides/: cli_usage.md  contributing.md  execution_guide.md  quickstart.md  reproducibility.md
docs/reports/: experimental_results.md  experimental_results_summary.md  relatorio_instancias_grandes_pt-br.md  sumario_executivo_pt-br.md  teste_completo_pt-br.md  validation_report_2025-10-20.md
docs/stylesheets/: extra.css
docs/validation/: validation_framework.md
experiments/: __init__.py  bc_ranker.py  visualization.py  visualization_publication.py
experiments/analysis/: __init__.py  baseline_comparison.py  calibration_study.py  distribution_analysis.py  large_scale_analysis.py  normalization_check.py  outlier_analysis.py  retraining_necessity_analysis.py
experiments/configs/: eval_sampling.yaml  eval_warm_start.yaml  pipeline_full.yaml  train_default.yaml
experiments/configs/ablations/: gat_full.yaml  gcn_full.yaml  pna_full.yaml  pna_no_values.yaml  pna_no_weights.yaml
experiments/examples/: __init__.py  demo.py
experiments/pipelines/: ablation_study.py  ablation_study_models.py  create_publication_figure.py  evaluate_large_instances.py  evaluate_ood_pipeline.py  evaluate_pipeline.py  in_distribution_validation.py  main.py  multi_seed_validation.py  publication_validation.py  train_pipeline.py
results/: README.md
results/ablations/features/: feature_ablation.json
results/baselines/: comparison_results.json
results/bc_ranker_full/: architecture_summary.json
results/bc_ranker_full/gat/: summary_gat.json
results/bc_ranker_full/gcn/: summary_gcn.json
results/bc_ranker_full/pna/: summary_pna.json
results/bc_ranker_inspect/: instance_2_metrics.json  report.md
results/bc_ranker_small/: summary_pna.json
results/reports/bc_ranker_v1/: instance_0_metrics.json  instance_1_metrics.json  metrics_summary.json
scripts/: bc_ranker_inspect.py  debug_repair.py  download_artifacts.py  plot_bipartite_graph.py  verify_codex.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/_archive/CI_WORKFLOW_FIXES/: index.html
site/_archive/FINAL_LINTING_FIXES/: index.html
site/_archive/LINTING_FIXES_SUMMARY/: index.html
site/_archive/VALIDATION_IMPLEMENTATION_SUMMARY/: index.html
site/_archive/VALIDATION_QUICKSTART/: index.html
site/_archive/WORKFLOW_FIX_SUMMARY/: index.html
site/api/: index.html
site/api/analysis/: index.html
site/api/data/: index.html
site/api/decoding/: index.html
site/api/eval/: index.html
site/api/models/: index.html
site/api/training/: index.html
site/architecture/implementation_summary/: index.html
site/development/: index.html
site/guides/cli_usage/: index.html
site/guides/execution_guide/: index.html
site/guides/quickstart/: index.html
site/reports/experimental_results/: index.html
site/reports/relatorio_instancias_grandes_pt-br/: index.html
site/reports/sumario_executivo_pt-br/: index.html
site/reports/teste_completo_pt-br/: index.html
site/reports/validation_report_2025-10-20/: index.html
site/search/: search_index.json
site/validation/validation_framework/: index.html
src/combo_opt/: __init__.py
src/combo_opt/core/: __init__.py  base_decoder.py  base_model.py  base_problem.py  protocols.py  registry.py
src/knapsack_gnn/: __init__.py  cli.py  types.py
src/knapsack_gnn/analysis/: __init__.py  calibration.py  cross_validation.py  reporting.py  stats.py  validation.py
src/knapsack_gnn/baselines/: __init__.py  greedy.py
src/knapsack_gnn/config/: __init__.py  loader.py  schemas.py
src/knapsack_gnn/data/: __init__.py  generator.py  graph_builder.py
tests/: __init__.py  conftest.py
tests/integration/: test_sampling_decoder.py
tests/unit/: test_data_generator.py  test_graph_builder.py  test_seed_manager.py  test_warm_start_ilp.py
(+23 files in other folders)
